# dashboards-reports

./: build.gradle
.github/workflows/: dashboards-reports-test-and-build-workflow.yml  kibana-reports-test-and-build-workflow.yml  reports-scheduler-test-and-build-workflow.yml
build-tools/: esplugin-coverage.gradle  pkgbuild.gradle
dashboards-reports/: opensearch_dashboards.json  package.json
dashboards-reports/public/components/utils/: settings_service.ts
dashboards-reports/rendering-engine/headless-chrome/: args.gn  build_headless_chrome.sh
dashboards-reports/server/routes/lib/: createReport.ts
dashboards-reports/server/routes/utils/: dataReportHelpers.ts
dashboards-reports/test/: jest.config.js
